<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|top"
            android:text="@string/activity"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/Email"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/viewUsers"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/showUserSet"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/note"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/sensor"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/downimage"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/sendlocation"
            android:textSize="24sp" />

    </LinearLayout>

</ScrollView>
